# ssl-brainmet

./: Makefile  README.md  parse_yaml.py  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: check_weights_after_finetuning.ipynb  explo_checkpoints.ipynb  explo_data.ipynb  overwrite_weigths.ipynb
scripts/: finetune_ssl_pretrained_naive.sh  train_baseline.sh
ssl_brainmet/: __init__.py  dataset.py  features.py  plots.py  utils.py
ssl_brainmet/config/: dataset.json  dataset_fingerprint.json  nnUNetPlans.json  nnUNetPlans_new.json
ssl_brainmet/config/finetuning/: nnUNetTrainerFineTuningV2.yaml  nnUNetTrainerFineTuningV2_exp2.yaml  nnUNetTrainerFineTuningV2_exp3.yaml
ssl_brainmet/data/: copy_data_task510.py  prepare_data_task510.py
ssl_brainmet/modeling/: predict.py  train.py
ssl_brainmet/models/: build_nnunet_model.py  model_vandrear.py
ssl_brainmet/scripts/: finetune_nnUNetTrainerFineTuningV2.sh  plan_and_preprocess.sh  test_yaml_parsing.sh  train_baseline_nnunet.sh
