[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ssl_brainmet"
version = "0.0.1"
description = "repository for self-supervised learning (SSL) on 3D tomographic images (CT and MRI) of the brain, focused on improving segmentation performance of brain metastases (BM) and analyzing their evolution after radiotherapy. Built using the nnU-Net framework and structured with the data science cookiecutter template."
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ssl_brainmet"]
force_sort_within_sections = true
